[package]
name = "pugl-rs-sys"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = { version = "0.3", optional = true }

[features]
opengl = []
vulkan = []
cairo = ["dep:pkg-config"]

[[example]]
name = "opengl"
required-features = ["opengl"]

[[example]]
name = "cairo"
required-features = ["cairo"]

[[example]]
name = "vulkan"
required-features = ["vulkan"]